--- a/html/index.html
+++ b/html/index.html
@@ -138,7 +138,7 @@ Strong Home</h1>
     </div>
   </div>
   <div class="carousel-item">
-    <img src="images/Banner.jpg" class="d-block w-100" alt="...">
+    <img src="images/banner.jpg" class="d-block w-100" alt="...">
     <div class="carousel-caption">
       <h1>Your Family Deserve a 
 Strong Home</h1>
